--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -10,4 +10,5 @@ test = false
 
 [dependencies]
 api_layer_client = { path = "../lib" }
-clap = "^4.0.18"
+tokio = { version = "^1.21.2", features = ["full"] }
+clap = { version = "^4.0.18", features = ["derive"] }
